--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="rtl">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -21,13 +21,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600" />
-		<link
-			rel="stylesheet"
-			href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
-			crossorigin="" />
+			href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap"
+			rel="stylesheet" />
 		<title>پنل ادمین پارسیان</title>
 	</head>
 	<body>
