--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,13 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100;200;300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+		<link rel="stylesheet" href="@sweetalert2/themes/dark/dark.css" />
+
+		<script src="sweetalert2/dist/sweetalert2.min.js"></script>
 		<title>پنل ادمین پارسیان</title>
 	</head>
 	<body>
